commit tree e5c1ef7d4da538415d7a8fee13062275082c8a4d

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,9 @@
-<!-- Create your form here -->
+<%= form_for @student do |f| %>
+    
+    <%= f.label :first_name, "First Name" %>
+    <%= f.text_field :first_name %>
+    <%= f.label :last_name, "Last Name" %>
+    <%= f.text_field :last_name %>
+    <%= f.submit "Log a new student, granny!" %>
+
+<% end %>
